@startuml
package "Main Package" {
    class Main {
        -input: Scanner
        -currentDate: Date
        + main(args: String[]): void
        - qualificationTool(totalDebt: int, unsecured: boolean, hardship: boolean): boolean
        - qualificationTool(unsecured:boolean, fixedIncome:boolean): boolean
    }
}

package "Credit Management" {
    class CreditorManager {
        + enterCreditorInformation(sc: Scanner): List<Creditor>
    }
    class Creditor {
        - name: String
                - debtAmount: double
                + Creditor(name: String, debtAmount: double)
                + getName(): String
                + getDebtAmount(): double
                + setDebtAmount(): double
    }
    class CreditorEntity {
        - name: String
    }
}

package "Draft Calculation" {
    class DraftCalculator {
        + provideEstimate(totalDebt: int, FEE_RATE: double): double
        + provideMonthlyDraft(estimate: double): double
        + provideProgramLength(monthlyDraft: double, estimate: double): double
    }
}

object Scanner {
}

Main --> Scanner
Main --> CreditorManager
Main --> DraftCalculator
Main --> qualificationTool

CreditorManager --> Scanner
CreditorManager --> Creditor
Creditor --> CreditorEntity

DraftCalculator --> Creditor

@enduml
